# Difix3d-3dgs-demo

./: .gitignore  README.md  pyproject.toml  tips.txt
data/: data.json
examples/gsplat/: simple_trainer_difix3d.py
examples/gsplat/data/ggbond/colmap/sparse/0/: project.ini
examples/gsplat/datasets/: colmap.py
src/: diffusers_demo.py  diffusers_ref_demo.py
